[gd_scene load_steps=15 format=2]

[ext_resource path="res://Maps/Map Scenes/Settings.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Images/SettingsPressed.png" type="Texture" id=2]
[ext_resource path="res://UI/Images/ContinueUnpressed.png" type="Texture" id=3]
[ext_resource path="res://UI/Images/ContinuePressed.png" type="Texture" id=4]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://UI/Images/LogoSprite.png" type="Texture" id=6]
[ext_resource path="res://UI/Images/HelpUnpressed.png" type="Texture" id=7]
[ext_resource path="res://UI/Images/SettingsUnpressed.png" type="Texture" id=8]
[ext_resource path="res://UI/Images/HelpPressed.png" type="Texture" id=9]
[ext_resource path="res://PressStart2P-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Scenes/SceneChanger.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/Images/PlayUnpressed.png" type="Texture" id=12]
[ext_resource path="res://UI/Images/PlayPressed.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 10 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin Container" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="margin Container"]
margin_right = 300.0
margin_bottom = 163.0

[node name="HBoxContainer" type="HBoxContainer" parent="margin Container/VBoxContainer"]
margin_right = 300.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureRect" parent="margin Container/VBoxContainer/HBoxContainer"]
margin_left = 42.0
margin_right = 82.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="margin Container/VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_top = 11.0
margin_right = 214.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "A-MAZE-D"
align = 1

[node name="Right" type="TextureRect" parent="margin Container/VBoxContainer/HBoxContainer"]
margin_left = 218.0
margin_right = 258.0
margin_bottom = 40.0
texture = ExtResource( 6 )
flip_h = true

[node name="VBoxContainer2" type="VBoxContainer" parent="margin Container/VBoxContainer"]
margin_top = 44.0
margin_right = 300.0
margin_bottom = 64.0
rect_min_size = Vector2( 300, 20 )
alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="margin Container/VBoxContainer"]
margin_top = 68.0
margin_right = 300.0
margin_bottom = 127.0
rect_min_size = Vector2( 0, 40 )
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="margin Container/VBoxContainer/VBoxContainer3"]
margin_right = 300.0
margin_bottom = 59.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="margin Container/VBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 110.0
margin_right = 190.0
margin_bottom = 59.0
custom_constants/separation = -5

[node name="Play" type="TextureButton" parent="margin Container/VBoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 32.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
stretch_mode = 3

[node name="Continue" type="TextureButton" parent="margin Container/VBoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 80.0
margin_bottom = 59.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
stretch_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="margin Container/VBoxContainer"]
margin_top = 131.0
margin_right = 300.0
margin_bottom = 163.0

[node name="HBoxContainer" type="HBoxContainer" parent="margin Container/VBoxContainer/HBoxContainer2"]
margin_right = 148.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 220

[node name="Help" type="TextureButton" parent="margin Container/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )

[node name="HBoxContainer2" type="HBoxContainer" parent="margin Container/VBoxContainer/HBoxContainer2"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 32.0
size_flags_horizontal = 3
alignment = 2

[node name="Setting" type="TextureButton" parent="margin Container/VBoxContainer/HBoxContainer2/HBoxContainer2"]
margin_left = 116.0
margin_right = 148.0
margin_bottom = 32.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Settings" parent="CanvasLayer" instance=ExtResource( 1 )]
visible = false
mouse_filter = 0

[node name="SceneChanger" parent="." instance=ExtResource( 11 )]
[connection signal="pressed" from="margin Container/VBoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="margin Container/VBoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="margin Container/VBoxContainer/HBoxContainer2/HBoxContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="margin Container/VBoxContainer/HBoxContainer2/HBoxContainer2/Setting" to="." method="_on_Setting_pressed"]

[editable path="CanvasLayer/Settings"]

[editable path="SceneChanger"]
